--- a/main.html
+++ b/main.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<head lang="en">
+    <title>OOM | You is coming soon…</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href=“main.css">
+</head>
 <body>
     <div class="container">
         <h1>OOM</h1>
